package msg;
//import "serialize.proto";

// room 注册到GW
message RS2GW_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional string agentname = 3;
}

// 注册返回
message GW2RS_RetRegist {
    optional string errcode = 1;
    optional string agentname = 2;
}

// 通知RS玩家断开连接清理房间
message GW2RS_UserDisconnect {
    optional int64 roomid = 1;
    optional uint64 userid = 2;
}

// 通知RS玩家断开连接清理房间,返回
message RS2GW_RetUserDisconnect {
    optional int64 roomid = 1;
    optional uint64 userid = 2;
    optional string errcode = 3;
}

